[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/background 2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/topUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/Bottom UI v 2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Grid.gd" type="Script" id=4]
[ext_resource path="res://Scripts/IceHolder.gd" type="Script" id=5]
[ext_resource path="res://Scripts/LockHolder.gd" type="Script" id=6]
[ext_resource path="res://Scripts/ConcreteHold.gd" type="Script" id=7]

[node name="gameWindow" type="Node2D"]

[node name="background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="topUI" parent="." instance=ExtResource( 2 )]

[node name="bottomUI" type="TextureRect" parent="."]
margin_top = 928.0
margin_right = 576.0
margin_bottom = 1020.0
texture = ExtResource( 3 )

[node name="Grid" type="Node2D" parent="."]
script = ExtResource( 4 )
width = 8
height = 10
xStart = 64
yStart = 800
offset = 64
yOffset = 5
iceSpaces = PoolVector2Array( 3, 0, 4, 0, 3, 9, 4, 9 )
lockSpaces = PoolVector2Array( 3, 2, 4, 2, 3, 7, 4, 7 )
concreteSpaces = PoolVector2Array( 0, 4, 0, 5, 7, 4, 7, 5 )
pieceValue = 10

[node name="IceHolder" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="LockHolder" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="ConcreteHold" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="destoryTImer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="collapseTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="refillTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
[connection signal="damageConcrete" from="Grid" to="ConcreteHold" method="_on_Grid_damageConcrete"]
[connection signal="damageIce" from="Grid" to="IceHolder" method="_on_Grid_damageIce"]
[connection signal="damageLock" from="Grid" to="LockHolder" method="_on_Grid_damageLock"]
[connection signal="makeConcrete" from="Grid" to="ConcreteHold" method="_on_Grid_makeConcrete"]
[connection signal="makeIce" from="Grid" to="IceHolder" method="_on_Grid_makeIce"]
[connection signal="makeLock" from="Grid" to="LockHolder" method="_on_Grid_makeLock"]
[connection signal="updateScore" from="Grid" to="topUI" method="_on_Grid_updateScore"]
[connection signal="removeLock" from="LockHolder" to="Grid" method="_on_LockHolder_removeLock"]
[connection signal="removeConcrete" from="ConcreteHold" to="Grid" method="_on_ConcreteHold_removeConcrete"]
[connection signal="timeout" from="destoryTImer" to="Grid" method="_on_destoryTImer_timeout"]
[connection signal="timeout" from="collapseTimer" to="Grid" method="_on_collapseTimer_timeout"]
[connection signal="timeout" from="refillTimer" to="Grid" method="_on_refillTimer_timeout"]
